chore(backend): refactor to use env variables, make cors allowed origins, and add Dockerfile with multi-stage build for backend